--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #342E37;
+  background: #FFFFF0;
   }
 
 .container {
@@ -12,6 +12,20 @@ h1 {
   font-size: 3rem;
   text-align: center;
   font-weight: 300;
+}
+.subtitle {
+  background-color: papayawhip;
+  width: 300px;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  border-radius: 10px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2.5rem;
+  text-align: center;
+  border: 1px solid gray;
+  
+  
 }
   
 img {
